# Linux-basics-2020

./: Dockerfile  task1.txt  task2.txt
seminar01/reports/10/: Митцев.txt
seminar01/work/: new-file.txt
seminar02/task01/: task01.sh
seminar02/task03/: task03.sh
seminar02/task05/: task05.sh
seminar02/task06/: task06.sh
seminar02/task07/: task07.sh
seminar02/task08/: task08.sh
seminar02/task09/: task09.sh
seminar03/task01/: task01.sh
seminar03/task02/: task02.sh
seminar03/task03/: task03.sh
seminar03/task04/: task04.sh
seminar03/task06/: task06.sh
seminar03/task07/: a  task07.sh
seminar03/task07/dirA/dirAA/: a.out
seminar03/task07/dirA/dirAB/: a.out
seminar03/task07/dirB/: a.out
seminar04/task01/: Makefile
seminar04/task02/: CMakeLists.txt
seminar05/: task1.txt  task2.sh  task3.sh
